# ruby-marshal-parser

./: .gitignore  README.md  pyproject.toml  ruby_marshal_parser.py  run  test.py  typecheck
golden/inputs/: ExitFate-Scripts.rxdata  ExitFate-Troops.rxdata
golden/outputs/: ExitFate-Actors.rxdata  ExitFate-Map010.rxdata  ExitFate-Scripts.rxdata  Reborn-MapInfos.rxdata  Rejuv-MapInfos.rxdata  Rejuv-System.rxdata
ruby_marshal_parser/: __init__.py  __main__.py
tests/: conftest.py  test_ruby_marshal_parser.py
tests/golden/inputs/: ExitFate-Actors.rxdata  ExitFate-Items.rxdata
tests/golden/outputs/: ExitFate-Items.rxdata  ExitFate-Troops.rxdata  Rejuv-Animations.rxdata  Rejuv-Map545.rxdata
