[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ruby_marshal_parser"
version = "0.0.1"
authors = [
    { name="Andrew Foote", email="footeandrew1@gmail.com" },
]
description = "A parser for Ruby's Marshal serialisation format"
readme = "README.md"
requires-python = ">=3.14.0a1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Andrew-Foote/ruby-marshal-parser"
Issues = "https://github.com/Andrew-Foote/ruby-marshal-parser/issues"

[project.optional-dependencies]
test = [
    "mypy",
    "pytest",
]

[pytest]
testpaths = ["tests"]